--- a/src/main/java/ConfigureRTC.form
+++ b/src/main/java/ConfigureRTC.form
@@ -158,7 +158,7 @@
           <Properties>
             <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Restore Last Text"/>
-            <Property name="toolTipText" type="java.lang.String" value="Restores the last text when ending the service(enable by default)"/>
+            <Property name="toolTipText" type="java.lang.String" value="Restores the last text when pausing the service(enable by default)"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jToggleBtnRestoreLastActionPerformed"/>
@@ -166,8 +166,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonEndService">
           <Properties>
-            <Property name="text" type="java.lang.String" value="End Service"/>
-            <Property name="toolTipText" type="java.lang.String" value="End converting the text automatically"/>
+            <Property name="text" type="java.lang.String" value="Pause Service"/>
+            <Property name="toolTipText" type="java.lang.String" value="Pause converting the text"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEndServiceActionPerformed"/>
